samples/_failures_safe/1761425897_f5997b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83bdd9da.c: In function ‘main’:
./samples/SAFE/__tmp_83bdd9da.c:153:43: error: missing terminating " character
  153 |                     print_matrix(&result, "A + B
      |                                           ^~~~~~
./samples/SAFE/__tmp_83bdd9da.c:153:21: error: expected expression at end of input
  153 |                     print_matrix(&result, "A + B
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_83bdd9da.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83bdd9da.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83bdd9da.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83bdd9da.c:153:21: error: expected declaration or statement at end of input
